# AndCore

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: themes.xml
bitmap/: build.gradle
bitmap/src/main/: AndroidManifest.xml
bitmap/src/main/cpp/: CMakeLists.txt  bitmap_jni.cc  bitmap_jni.h  symbols
bitmap/src/main/cpp/base/: utils.h
bitmap/src/main/cpp/hook/: helper-inl.h  hook.cc  hook.h  proxy.cc
bitmap/src/main/java/com/wyc/bitmap/: BimtapMainActivity.java  JNI.java
bitmap/src/main/res/layout/: activity_bimtap_main.xml
gradle/wrapper/: gradle-wrapper.properties
home/: build.gradle
home/src/main/: AndroidManifest.xml
home/src/main/java/com/wyc/home/: AnnotatedStackTrace.java  DeadLockDiagnose.java  LockMock.java  (+4 more)
home/src/main/res/layout/: activity_home.xml
home/src/main/res/values/: ids.xml
qhook/: build.gradle
qhook/src/main/: AndroidManifest.xml
qhook/src/main/cpp/: CMakeLists.txt  dl_sym  qhook.cc  qhook.h  symbols
qhook/src/main/cpp/action/: action.cc  action.h
qhook/src/main/cpp/base/: dl_sym.h  macro.h  sym.h
qhook/src/main/cpp/hook/: dl.cc  dl.h  hook.cc  hook.h  proxy.cc  proxy.h  qaction.cc  qaction.h
qhook/src/main/res/layout/: activity_qhook.xml
qhook/src/main/res/values/: strings.xml  themes.xml
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
utils/src/main/cpp/: CMakeLists.txt  env.h  utils_jni.cc  utils_jni.h
utils/src/main/cpp/android-base/: debug.h  file.cc  file.h  logging.cc  logging.h  macros.h  mapped_file.cc  mapped_file.h  strings.cc  unique_fd.h
utils/src/main/cpp/apue/: signal_test.cc  signal_test.h
utils/src/main/cpp/base/: atomic.h  atomic_stack.h  barrier.cc  barrier.h  bit_memory_region.h  bit_table.h  bit_utils.h  casts.h  data_hash.h  dchecked_vector.h  debug_stack.h  globals.h  hash_set.h  leb128.h  locks.cc  locks.h  macros.h  mem_map.cc  mem_map.h  mem_map_unix.cc  mutex-inl.h  mutex.cc  mutex.h  obj_ptr-inl.h  obj_ptr.h  rand_util.cc  rand_utils.h  safe_copy.cc  safe_map.h  statistics-inl.h  statistics.h  stl_util.h  thread_pool.cc  thread_pool.h  time_utils.cc  time_utils.h  utf8.cc  utf8.h  utils.h
utils/src/main/cpp/base/arch/: instruction_set.h
utils/src/main/cpp/dexdump/: dexdump.cc  dexdump_cfg.cc  dexdump_cfg.h  dexdump_main.cc
utils/src/main/cpp/effective-cpp/: effect-1.cc  effect-1.h  effect-2.cc  effect.cc  effect.h
utils/src/main/cpp/gc/: bitmap.cc  bitmap.h  card_table.cc  card_table.h  space_bitmap-inl.h  space_bitmap.cc  space_bitmap.h
utils/src/main/cpp/jni-helper/: core_jni_helpers.h  scoped_local_ref.h
utils/src/main/cpp/libartbase/: bit_utils.h  dumpable.h  hiddenapi_flags.h
utils/src/main/cpp/libdexfile/: class_accessor-inl.h  class_accessor.h  class_iterator.h  code_item_accessors.h  compact_dex_file.h  descriptors_names.cc  dex_file.cc  dex_file.h  dex_file_exception_helpers.h  dex_file_loader.cc  dex_file_structs.h  dex_file_verifier.h  dex_instruction.cc  dex_instruction.h  dex_instruction_iterator.h  method_reference.h  signature.cc  standard_dex_file.h
utils/src/main/cpp/libziparchive/: zip_archive.cc  zip_archive_stream_entry.cc  zip_writer.cc
utils/src/main/cpp/libziparchive/include/ziparchive/: zip_archive_stream_entry.h
utils/src/main/cpp/test/: elf_utils.cc  elf_utils.h  p_elf.h  test_assemble.h  test_atomic.h  test_atomic_stack.h  test_bit_table.h  test_bit_utils.h  test_bitmap.h  test_card_table.h  test_casts.h  test_dcheck_vector.h  test_debug_stack.h  test_elf.cc  test_enum.h  test_file.h  test_futex.h  test_hash.h  test_hashmap.h  test_iter_range.h  test_jni_helper.h  test_log.h  test_mem_map.h  test_mem_model.h  test_mutex.h  test_parseint.h  test_rand.h  test_safe_copy.h  test_space_bitmap.h  test_statistics.h  test_stl-util.h  test_string.h  test_thread_pool.h  test_time_utils.h  test_unix_file.h  test_util.h
utils/src/main/cpp/test/cpp/: cpp_misc.cc  cpp_sample.cc  cpp_sample.h
utils/src/main/cpp/test/socket/: socket_sample.cc  socket_sample.h
utils/src/main/cpp/unix_file/: fd_file.cc
utils/src/main/res/layout/: activity_graphics.xml  activity_surface_view.xml  ipc_activity.xml  utils_cpp.xml  utils_graphics.xml  utils_ipc.xml  utils_main.xml  utils_socket.xml  utils_surface_view.xml  utils_unix.xml
utils/src/main/res/values-night/: themes.xml
(+61 files in other folders)
